Fixed: wflow-consoleweb - Calculation Field - Calculation field having wrong padding when display as readonly. @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/form8.css
+++ b/wflow-consoleweb/src/main/webapp/css/form8.css
@@ -823,8 +823,7 @@ body.rtl .handsontable .htCore tr td:last-child {
 
 /* other */
 .calculationField_value {
-    padding: 10px 12px;
-    color: #495057;
+    padding: 6px 10px 0 1px;
 }
 
 /* Multipaged form */
